--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,29 +7,183 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="_css/index.css" />
+    <link rel="icon" href=" https://img.icons8.com/color/96/000000/dog.png">
 
-    <title>cadastro</title>
+    <title>cadastrar</title>
 </head>
 
 <body>
-    <header id="cabecalho">
-        <div>
+    <div class="container">
+        <header id="cabecalho">
+            <img class="d-block mx-auto mb-2 " src="https://img.icons8.com/color/96/000000/dog.png ">
             <h1>Pet Shop</h1>
             <h5>Seu Pet Shop Favorito</h5>
+        </header>
+        <hr class="mb-3" />
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="textoNavbar ">
+
+            <ul class="navbar-nav justify-content-center">
+                <li class="nav-item "><a class="nav-link" href="index.html ">Home</a></li>
+                <li class="nav-item "><a class="nav-link" href="cadastro.html ">Cadastrar Cliente</a></li>
+                <li class="nav-item "><a class="nav-link" href="index.html ">Cadastrar Fornecedor</a></li>
+                <li class="nav-item "><a class="nav-link" href="listClientes.html">Clientes</a></li>
+                <li class="nav-item "><a class="nav-link" href="index.html ">Fornecedor</a></li>
+            </ul>
+        </nav>
+        <br>
+        <div class="row">
+            <form id="formInput">
+                <div class="panel-heading">
+                    <h5>Cadastro Cliente</h5>
+                </div>
+                <div class="panel-body">
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <div class="col-md-11 control-label">
+                                <p class="help-block">
+                                    <h11>*</h11> Campo Obrigatório
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class=" control-label" for="inputName">Nome <h11>*</h11></label>
+                            <input id="inputName" name="inputName" placeholder="Nome Completo" class="form-control" required="" type="text">
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label class=" control-label" for="inputCpf">CPF <h11>*</h11></label>
+                                <input id="inputCpf" name="inputCpf" placeholder="Apenas números" class="form-control" required="" type="number" maxlength="11" pattern="[0-9]+$">
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label class=" control-label" for="inputDtNasc">Nascimento<h11>*</h11></label>
+                                <input id="inputDtNasc" name="inputDtNasc" placeholder="DD/MM/AAAA" class="form-control" required="" type="date" maxlength="10" OnKeyPress="formatar('##/##/####', this)">
+                            </div>
+
+                        </div>
+                        <br>
+                        <!-- Prepended text-->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label class="control-label" for="inputTel1">Telefone</label>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                                <input id="inputTel1" name="inputTel1" class="form-control" placeholder="XX XXXXX-XXXX" type="number" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$" />
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label class="control-label" for="inputTel2">Telefone <h11>*</h11></label>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                                <input id="inputTel2" name="inputTel2" class="form-control" placeholder="XX XXXXX-XXXX" required="" type="number" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Prepended text-->
+                    <div class="form-group">
+                        <div class="form-group">
+                            <label class="control-label" for="inputEmail">Email <h11>*</h11></label>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="inputEmail" name="inputEmail" class="form-control" placeholder="email@email.com" required="" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        </div>
+                    </div>
+
+
+                    <!-- Search input-->
+                    <div class="form-group">
+                        <label class="control-label" for="inputCep">CEP <h11>*</h11></label>
+                        <input id="inputCep" name="inputCep" placeholder="Apenas números" class="form-control input-md" required="" value="" type="number" maxlength="8" pattern="[0-9]+$">
+                    </div>
+
+                    <div class="form-group">
+                        <div class="form-group">
+                            <div class="control-label">
+                                <span class="input-group-addon" for="inputRua">Rua</span>
+                                <input id="inputRua" name="inputRua" class="form-control" placeholder="" required="" readonly="readonly" type="text">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="inputCidade">Nº <h11>*</h11></label>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="inputNum" name="inputNum" class="form-control" maxlength="10" placeholder="" required="" type="text">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="inputCidade">Bairro</label>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="inputBairro" name="inputBairro" class="form-control" placeholder="" required="" type="text">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="inputCidade">Cidade</label>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="inputCidade" name="inputCidade" class="form-control" placeholder="" required="" type="text">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="inputEstado">Estado</label>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="inputEstado" name="inputEstado" class="form-control" placeholder="" required="" type="text">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Cadastrar"></label>
+                        <div class="col-md-8">
+                            <button id="btnCadastrar" name="btnCadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
+                            <button id="Cancelar" name="Cancelar" class="btn btn-danger" type="Reset">Cancelar</button>
+                        </div>
+                    </div>
+
+                </div>
         </div>
 
-    </header>
+        </form>
 
-    <img id="imgHeader" src="img/1517090.png">
-    <ul class="list-group">
-        <li class="list-group-item list-group-item-action "><a href="index.html">Home</a></li>
-        <li class="list-group-item list-group-item-action "><a href="cadastro.html">Cadastrar Cliente</a></li>
-        <li class="list-group-item list-group-item-action ">Cadastrar Fornercedor</li>
-        <li class="list-group-item list-group-item-action ">Estoque</li>
-    </ul>
 
-    <h1> seu mundo melhor</h1>
+    </div>
 
+    <div class="jumbotron">
+        <table class="table table-striped" id="tbCadastro">
+            <th>
+                <th>Nome:</th>
+                <th>CPF:</th>
+                <th>Data Nascimento:</th>
+                <th>Telefone 1:</th>
+                <th>Telefone 2:</th>
+                <th>Email:</th>
+                <th>Cep:</th>
+                <th>Rua:</th>
+                <th>N°:</th>
+                <th>Bairro:</th>
+                <th>Cidade:</th>
+                <th>Estado:</th>
+            </th>
+
+
+        </table>
+    </div>
+
+    <div class="align-content-xl-center">
+        <hr class="mb-5 " />
+        <footer id="rodape ">
+            <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber / Whellington <br />
+                <a href="http://google.com " target="_blank ">Facebook</a>
+                <a href="http://google.com " target="_blank ">Twitter</a>
+            </p>
+        </footer>
+
+    </div>
+
+    <script src="js/indexJs.js" type="text/javascript"></script>
 </body>
 
 </html>
