--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="textoNavbar ">
 
             <ul class="navbar-nav justify-content-center">
-                <li class="nav-item "><a class="nav-link" href="index.html ">Home</a></li>
-                <li class="nav-item "><a class="nav-link" href="cadastro.html ">Cadastrar Cliente</a></li>
-                <li class="nav-item "><a class="nav-link" href="index.html ">Cadastrar Fornecedor</a></li>
-                <li class="nav-item "><a class="nav-link" href="index.html ">Clientes</a></li>
-                <li class="nav-item "><a class="nav-link" href="index.html ">Fornecedor</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html ">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadastro.html ">Cadastrar Cliente</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadFornecedor.html">Cadastrar Fornecedor</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadProduto.html">Cadastrar Produto</a></li>
+                <li class="nav-item"><a class="nav-link" href="listClientes.html">Clientes</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html ">Fornecedor</a></li>
             </ul>
         </nav>
     </div>
@@ -39,7 +40,8 @@
     <div class="align-content-xl-center">
         <hr class="mb-5 " />
         <footer id="rodape ">
-            <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber / Whellington<br />
+            <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber /
+                Whellington<br />
                 <a href="http://google.com " target="_blank ">Facebook</a>
                 <a href="http://google.com " target="_blank ">Twitter</a>
             </p>
