--- a/cadFornecedor.html
+++ b/cadFornecedor.html
@@ -63,7 +63,34 @@
                 <label for="municipio">Municipio:</label>
                 <input type="text" name="municipio" id="municipio" placeholder="">
                 <label for="uf">UF:</label>
-                <input type="text" name="uf" id="uf" placeholder="">
+                    <select name="uf" id="uf">
+                        <option value="AL">AL</option>
+                        <option value="AP">AP</option>
+                        <option value="AM">AM</option>
+                        <option value="BA">BA</option>
+                        <option value="CE">CE</option>
+                        <option value="DF">DF</option>
+                        <option value="ES">ES</option>
+                        <option value="GO">GO</option>
+                        <option value="MA">MA</option>
+                        <option value="MT">MT</option>
+                        <option value="MS">MS</option>
+                        <option value="MG">MG</option>
+                        <option value="PA">PA</option>
+                        <option value="PB">PB</option>
+                        <option value="PR">PR</option>
+                        <option value="PE">PE</option>
+                        <option value="PI">PI</option>
+                        <option value="RJ">RJ</option>
+                        <option value="RN">RN</option>
+                        <option value="RS">RS</option>
+                        <option value="RO">RO</option>
+                        <option value="RR">RR</option>
+                        <option value="SC">SC</option>
+                        <option value="SP">SP</option>
+                        <option value="SE">SE</option>
+                        <option value="TO">TO</option>
+                    </select>
                 <label for="telefone">Telefone:</label>
                 <input type="text" name="telefone" id="telefone" placeholder="(00) 00000-0000">
 
@@ -71,10 +98,12 @@
 
             <br>
 
-            <button class="btnFornecedor">Cadastrar Fornecedor</button>
+            <button class="addFornecedor">Cadastrar Fornecedor</button>
 
         </form>
     </main>
+
+    <script type="text/javascript" src="js/cadFornecedor.js"></script>
 </body>
 
 </html>
