--- a/cadProduto.html
+++ b/cadProduto.html
@@ -26,6 +26,42 @@
 
     </nav>
 
+        <form action="" method="POST">
+
+            <p>CADASTRO DE PRODUTOS</p>
+
+            <label for="codigo">Código</label>
+            <input type="text" name="codigo" id="codigo">
+            <label for="nomeProduto">Descrição</label>
+            <input type="text" name="nomeProduto" id="nomeProduto" placeholder="Digitar o nome do produto">
+            <label for="apelido">Apelido</label>
+            <input type="text" name="apelido" id="apelido" placeholder="Digitar nome do produto interno">
+            <label for="codBarras">Código de Barras</label>
+            <input type="text" name="codBarras" id="codBarras" placeholder="Leitor de Código de Barras">
+            <label for="unMedida">Unidade de Media</label>
+            <input type="text" name="unMedida" id="unMedida" placeholder="Ex: m², kg, MH...">
+            <label for="vCusto">Valor de Custo</label>
+            <input type="text" name="vCusto" id="vCusto" placeholder="Valor de custo">
+            <label for="mgLucro">Margem de Lucro</label>
+            <input type="text" name="mgLucro" id="mgLucro" placeholder="Margem em percentual">
+            <label for="vVenda">Valor de Venda</label>
+            <input type="text" name="vVenda" id="vVenda">
+
+            <p>INFORMAÇÕES DE ESTOQUE</p>
+
+            <label for="qtdeMin">Mín. em estoque</label>
+            <input type="text" name="qtdeMin" id="qtdeMin" placeholder="Quantdade mínima em estoque">
+            <label for="qtdeMax">Máx. em estoque</label>
+            <input type="text" name="qtdeMax" id="qtdeMax" placeholder="Quantdade máxima em estoque">
+            <label for="grupo">Grupo</label>
+            <input type="text" name="grupo" id="grupo" placeholder="Ex: Ração, medicamentos, higiene e etc..">
+            <label for="idFabricante">Fabicante</label>
+            <input type="text" name="idFabricante" id="idFabricante" placeholder="Informar código do fornecedor">
+         
+            <button class="addProduto">Cadastrar Produto</button>
+
+    </form>
+
 </body>
 
 </html>
