--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="pt-br">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pet Shop</title>
-    <link rel="icon" href=" https://img.icons8.com/color/96/000000/dog.png">
+    <link rel="icon" href="img/dog.png">
     <link rel="stylesheet " type="text/css " href="lib/bootstrap.css" />
     <link rel="stylesheet " type="text/css " href="lib/bootstrap.min.css" />
     <link rel="stylesheet " type="text/css " href="lib/bootstrap-grid.min.css " />
@@ -16,6 +17,7 @@
 
 <body>
     <div class="container">
+
         <header id="cabecalho">
             <img class="d-block mx-auto mb-2 " src="https://img.icons8.com/color/96/000000/dog.png ">
             <h1>Pet Shop</h1>
@@ -26,8 +28,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="textoNavbar ">
 
             <ul class="navbar-nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="index.html ">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="cadastro.html ">Cadastrar Cliente</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastrar Cliente</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadFornecedor.html">Cadastrar Fornecedor</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadProduto.html">Cadastrar Produto</a></li>
                 <li class="nav-item"><a class="nav-link" href="listClientes.html">Clientes</a></li>
@@ -35,7 +37,6 @@
             </ul>
         </nav>
     </div>
-
 
     <div class="align-content-xl-center">
         <hr class="mb-5 " />
