Correções no arquivo cadClientes / index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
         <header id="cabecalho">
-            <img class="d-block mx-auto mb-2 " src="https://img.icons8.com/color/96/000000/dog.png ">
+            <img class="d-block mx-auto mb-2 " src="img/dog.png">
             <h1>Pet Shop</h1>
             <h5>Seu Pet Shop Favorito</h5>
         </header>
@@ -29,11 +29,11 @@
 
             <ul class="navbar-nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastrar Cliente</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadClientes.html">Cadastrar Cliente</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadFornecedor.html">Cadastrar Fornecedor</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadProduto.html">Cadastrar Produto</a></li>
                 <li class="nav-item"><a class="nav-link" href="listClientes.html">Clientes</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html ">Fornecedor</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html ">Fornecedores</a></li>
             </ul>
         </nav>
     </div>
@@ -41,8 +41,7 @@
     <div class="align-content-xl-center">
         <hr class="mb-5 " />
         <footer id="rodape ">
-            <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber /
-                Whellington<br />
+            <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber / Whellington<br />
                 <a href="http://google.com " target="_blank ">Facebook</a>
                 <a href="http://google.com " target="_blank ">Twitter</a>
             </p>
