--- a/cadClientes.html
+++ b/cadClientes.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="_css/index.css" />
-    <link rel="icon" href=" https://img.icons8.com/color/96/000000/dog.png">
+    <link rel="icon" href="img/dog.png">
 
     <title>cadastrar</title>
 </head>
@@ -15,7 +14,7 @@
 <body>
     <div class="container">
         <header id="cabecalho">
-            <img class="d-block mx-auto mb-2 " src="https://img.icons8.com/color/96/000000/dog.png ">
+            <img class="d-block mx-auto mb-2 " src="img/dog.png">
             <h1>Pet Shop</h1>
             <h5>Seu Pet Shop Favorito</h5>
         </header>
@@ -25,13 +24,12 @@
 
             <ul class="navbar-nav justify-content-center">
                 <li class="nav-item "><a class="nav-link" href="index.html ">Home</a></li>
-                <li class="nav-item "><a class="nav-link" href="cadastro.html ">Cadastrar Cliente</a></li>
+                <li class="nav-item "><a class="nav-link" href="cadClientes.html">Cadastrar Cliente</a></li>
                 <li class="nav-item "><a class="nav-link" href="index.html ">Cadastrar Fornecedor</a></li>
                 <li class="nav-item "><a class="nav-link" href="listClientes.html">Clientes</a></li>
-                <li class="nav-item "><a class="nav-link" href="index.html ">Fornecedor</a></li>
+                <li class="nav-item "><a class="nav-link" href="index.html ">Fornecedores</a></li>
             </ul>
         </nav>
-        <h1> teste</h1>
         <br>
         <div class="row">
             <form id="formInput">
@@ -51,7 +49,7 @@
                     <!-- Text input-->
                     <div class="form-group">
                         <label class=" control-label" for="inputName">Nome <h11>*</h11></label>
-                        <input id="inputName" name="inputName" placeholder="Nome Completo" class="form-control" required type="text" maxlength="40"  >
+                        <input id="inputName" name="inputName" placeholder="Nome Completo" class="form-control" required type="text" maxlength="40">
                     </div>
 
                     <!-- Text input-->
@@ -144,7 +142,7 @@
             </form>
         </div>
 
-        <div class="jumbotron">
+        <!-- <div class="jumbotron">
             <table class="table table-striped" id="tbCadastro">
                 <thead>
                     <tr>
@@ -169,20 +167,20 @@
                 </tbody>
 
             </table>
-        </div>
+        </div> -->
 
         <div class="align-content-xl-center">
             <hr class="mb-5 " />
             <footer id="rodape ">
                 <p class="mt-5 mb-3 text-muted text-center ">Copyright &copy; 2019 - by David Linhares / Mauro Weber / Whellington <br />
-                    <a href="http://google.com " target="_blank ">Facebook</a>
-                    <a href="http://google.com " target="_blank ">Twitter</a>
+                    <a href="http://google.com " target="_blank "><img src="img/facebook.png" class="navbar-toggler-icon"> Facebook</a>
+                    <a href="http://google.com " target="_blank "><img src="img/instragram.png" class="navbar-toggler-icon"> Instagram</a>
                 </p>
             </footer>
 
         </div>
     </div>
-    <script src="js/indexJs.js" type="text/javascript"></script>
+    <script src="js/cadCliente.js" type="text/javascript"></script>
 </body>
 
 </html>
